<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_wrapBehaviorInParent="included"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6D5D5"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            android:theme="?attr/actionBarTheme"
            app:title="Calculator"
            app:titleCentered="true"
            app:titleMargin="4dp"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display2"
            app:titleTextColor="#BC94F1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/AC"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/openbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/open"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/closebr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/close"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/div"
                android:layout_width="101dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:contentDescription="divide"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/img_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/seven"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/eight"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/nine"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/mul"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/four"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/five"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/six"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/sub"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/one"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/two"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/three"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/add"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/del"
                android:layout_width="101dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:contentDescription="delete a digit"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/img" />

            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#CCC8C8"
                android:fontFamily="sans-serif-black"
                android:text="@string/equal"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>